creating ChangeLog
2002-10-09 David Malcolm

	* global.h, xmledit.c

	Started moving the stack code into a separate special-purpose data structure.

2002-10-09 David Malcolm

	* global.h, xmledit.c

	Moved draw_line_t from CongXMLEditor into CongLayoutCache; various code layout cleanups
	
2002-10-08 David Malcolm

	* cursor.c, global.h, popup.c, position.c, select.c, xmledit.c, xmlview.c
	
	Changed struct xed to struct CongXMLEditor, created CongLayoutCache and refactored code involving "lines" into it.
	
2002-10-04 David Malcolm

	* cong-document.c, cong-error-file-open.c, cong-location.c, global.h, main.c, open.c, popup.c, position.c, select.c, tree.c, xmledit.c, xmlview.c

	Renamed various structs to match naming convention; improvements to error handling when loading files
	
2002-09-20 David Malcolm

	* cong-dispspec-registry.c

	Bullet-proofing for the loader

	* cursor.c, dispspec.c, global.h, xmledit.c

	Generalised the support for paragraph tags.
	
2002-09-18 David Malcolm

	* cong-document.c, cursor.c, dispspec.c, global.h, main.c, open.c, popup.c, position.c, tree.c, xmldata.c, xmledit.c, xmlview.c

	Moved dispspec from the_globals into each document, fixing many (but not all) bugs when working with multiple documents of different types.
	
2002-08-26 David Malcolm

	* cong-dispspec-registry.c

	New file:  manages a registry of all known dispspecs so that the app can guess at dispspecs as documents are loaded
	
	* Makefile

	Added cong-dispspec-registry.c

	* cong-error-dialog.c, cong-error-file-open.c, cong-error-file-save.c, cong-error-tests.c

	Added "convenience buttons" to some dialogs

	* dispspec.c, global.h, main.c, open.c

	The app now has a registry of dispspecs and automatically chooses one when a document is opened.

	* popup.c, xmledit.c, xmlview.c

	Minor cleanups
	
2002-08-25 David Malcolm

	* cong-error-file-open.c

	User-friendly dialogs for GnomeVFS errors

	* cong-error-tests.c

	Automatic testing of all possible load/save errors.
